--- a/style.html
+++ b/style.html
@@ -1039,9 +1039,11 @@
         /* Cards Hero */
         .cards-hero {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(260px, 340px));
             gap: 20px;
-            margin-bottom: 30px;
+            margin: 0 auto 30px;
+            justify-content: center;
+            max-width: 1100px;
         }
         .card {
             background: var(--surface-color);
