--- a/index.html
+++ b/index.html
@@ -955,22 +955,22 @@
                 <div class="mov-modal-hero">
                     <div class="mov-hero-copy">
                         <p class="eyebrow">Organize a guarda de volumes</p>
-                        <h3>Fluxo de movimentações do armário</h3>
-                        <p class="helper-text">Escolha o tipo, descreva a ação e detalhe os volumes. Entrada adiciona, Saída remove e Conferência apenas confirma o inventário.</p>
+                        <h3>Movimentações do armário</h3>
+                        <p class="helper-text">Registre entradas, saídas ou conferências sempre que houver movimentação de pertences.</p>
                     </div>
                     <div class="mov-hero-hints">
                         <div class="mov-hero-hint">
                             <i class="fas fa-clipboard-check" aria-hidden="true"></i>
                             <div>
-                                <strong>Passo 1</strong>
-                                <p>Selecione o tipo (Entrada, Saída ou Conferência) antes de preencher o restante.</p>
+                                <strong>Transparência</strong>
+                                <p>A linha do tempo mostra quem registrou cada ação e quando.</p>
                             </div>
                         </div>
                         <div class="mov-hero-hint">
                             <i class="fas fa-box-open" aria-hidden="true"></i>
                             <div>
-                                <strong>Passo 2</strong>
-                                <p>Use os volumes existentes como referência para manter rastreabilidade.</p>
+                                <strong>Controle dos itens</strong>
+                                <p>Use os volumes existentes como referência antes de autorizar saídas.</p>
                             </div>
                         </div>
                     </div>
@@ -988,31 +988,7 @@
                             <form id="movimentacao-form">
                                 <div class="form-group">
                                     <label for="mov-tipo">Tipo de movimentação</label>
-                                    <p class="helper-text">Escolha primeiro o tipo para ajustar os campos e manter a consistência do registro.</p>
-                                    <div class="mov-tipo-picker" role="group" aria-label="Tipo de movimentação">
-                                        <button type="button" class="mov-tipo-btn" data-mov-opcao="entrada" aria-pressed="false">
-                                            <span class="mov-tipo-icon"><i class="fas fa-arrow-down"></i></span>
-                                            <span class="mov-tipo-text">
-                                                <strong>Entrada</strong>
-                                                <small>Registrar itens que estão sendo guardados.</small>
-                                            </span>
-                                        </button>
-                                        <button type="button" class="mov-tipo-btn" data-mov-opcao="saida" aria-pressed="false">
-                                            <span class="mov-tipo-icon"><i class="fas fa-arrow-up"></i></span>
-                                            <span class="mov-tipo-text">
-                                                <strong>Saída</strong>
-                                                <small>Registrar itens que estão sendo retirados.</small>
-                                            </span>
-                                        </button>
-                                        <button type="button" class="mov-tipo-btn" data-mov-opcao="conferencia" aria-pressed="false">
-                                            <span class="mov-tipo-icon"><i class="fas fa-clipboard-list"></i></span>
-                                            <span class="mov-tipo-text">
-                                                <strong>Conferência</strong>
-                                                <small>Confirmar o que permanece no armário.</small>
-                                            </span>
-                                        </button>
-                                    </div>
-                                    <select id="mov-tipo" class="form-control sr-only" required>
+                                    <select id="mov-tipo" class="form-control" required>
                                         <option value="">Selecione</option>
                                         <option value="entrada">Entrada de pertences</option>
                                         <option value="saida">Saída de pertences</option>
@@ -1031,8 +1007,8 @@
                                     <div class="helper-text">Prefira reaproveitar os volumes cadastrados na abertura ou em entradas anteriores para manter a rastreabilidade.</div>
                                     <div class="movimentacao-itens-list" id="mov-itens-list"></div>
                                     <div class="form-inline-actions">
-                                        <button type="button" class="btn btn-secondary" id="mov-add-item">Adicionar item manualmente</button>
-                                        <button type="button" class="btn btn-ghost" id="mov-preencher-itens">Usar itens já registrados</button>
+                                        <button type="button" class="btn btn-secondary" id="mov-add-item">Adicionar item não cadastrado</button>
+                                        <button type="button" class="btn btn-ghost" id="mov-preencher-itens">Preencher com itens registrados</button>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -1050,7 +1026,7 @@
                                     </div>
                                 </div>
                                 <div class="form-actions align-start">
-                                    <button type="submit" class="btn btn-primary">Registrar movimentação</button>
+                                    <button type="submit" class="btn btn-primary">Adicionar movimentação</button>
                                 </div>
                             </form>
                         </div>
